--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,31 @@ body {
   border-radius: 5px;
 }
 
-.header {
+.inventory {
+  align-items: center;
+}
+
+.inventory h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
 }
 
-.btn {
+.inventory__item {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.inventory__item h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.addbtn {
   display: inline-block;
   background: #000;
   color: #fff;
@@ -43,34 +60,57 @@ body {
   font-family: inherit;
 }
 
-.btn:focus {
+.addbtn:focus {
   outline: none;
 }
 
-.btn:active {
+.addbtn:active {
   transform: scale(0.98);
 }
 
-.btn-block {
+.addbtn-block {
   display: block;
   width: 100%;
 }
 
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
+.navbar {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 55px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
   display: flex;
+  overflow-x: auto;
+}
+
+.navbar__item {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  flex-grow: 1;
+  min-width: 50px;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 13px;
+  color: #4444;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  transition: background-color 0.1s ease-in-out;
+}
+
+.navbar__item:hover {
+  background-color: #eeeeee;
+}
+
+.navbar__item--active {
+  color: #009578;
+}
+
+.navbar__icon {
+  font-size: 18px;
 }
 
 .add-form {
@@ -106,51 +146,4 @@ body {
 .form-control-check input {
   flex: 2;
   height: 20px;
-}
-
-footer {
-  margin-top: 30px;
-  text-align: center;
-}
-
-/* Navbar */
-.nav {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin-top: 5%;
-  width: 100%;
-  height: 55px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
-  display: flex;
-  overflow-x: auto;
-}
-
-.nav__link {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  min-width: 50px;
-  overflow: hidden;
-  white-space: nowrap;
-  font-size: 13px;
-  color: #4444;
-  text-decoration: none;
-  -webkit-tap-highlight-color: transparent;
-  transition: background-color 0.1s ease-in-out;
-}
-
-.nav__link:hover {
-  background-color: #eeeeee;
-}
-
-.nav__link--active {
-  color: #009578;
-}
-
-.nav__icon {
-  font-size: 18px;
 }
