--- a/src/index.css
+++ b/src/index.css
@@ -1,149 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Poppins', sans-serif;
-}
-
-.container {
-  position: relative;
-  height: 700px;
-  max-width: 500px;
-  margin: 30px auto;
-  overflow: auto;
-  min-height: 300px;
-  border: 1px solid steelblue;
-  padding: 30px;
-  border-radius: 5px;
-}
-
-.inventory {
-  align-items: center;
-}
-
-.inventory h1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 5%;
-}
-
-.inventory__item {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.inventory__item h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.addbtn {
-  display: inline-block;
-  background: #000;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: inherit;
-}
-
-.addbtn:focus {
-  outline: none;
-}
-
-.addbtn:active {
-  transform: scale(0.98);
-}
-
-.addbtn-block {
-  display: block;
-  width: 100%;
-}
-
-.navbar {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 55px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
-  display: flex;
-  overflow-x: auto;
-}
-
-.navbar__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  min-width: 50px;
-  overflow: hidden;
-  white-space: nowrap;
-  font-size: 13px;
-  color: #4444;
-  text-decoration: none;
-  -webkit-tap-highlight-color: transparent;
-  transition: background-color 0.1s ease-in-out;
-}
-
-.navbar__item:hover {
-  background-color: #eeeeee;
-}
-
-.navbar__item--active {
-  color: #009578;
-}
-
-.navbar__icon {
-  font-size: 18px;
-}
-
-.add-form {
-  margin-bottom: 40px;
-}
-
-.form-control {
-  margin: 20px 0;
-}
-
-.form-control label {
-  display: block;
-}
-
-.form-control input {
-  width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
-  font-size: 17px;
-}
-
-.form-control-check {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-control-check label {
-  flex: 1;
-}
-
-.form-control-check input {
-  flex: 2;
-  height: 20px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
